<!--
  ~ Copyright 2016 Substance Mobile
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!-- App Name -->
    <string name="app_name">Music</string>
    <string name="app_name_actual">GEM Player</string>

    <!-- Activities -->
    <string name="title_activity_albums">Album</string>
    <string name="title_activity_main">Music</string>
    <string name="title_activity_main_goog_experience">My Library</string>
    <string name="title_activity_now_playing">Now Playing</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_choose_icon">Choose Icon</string>
    <string name="title_activity_quick_peek">Quick Peek</string>
    <string name="title_activity_album_color">Change Color</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_album_details" translatable="false">ALBUM_DETAILS</string>
    <string name="title_activity_about">About</string>

    <!-- Action/Toolbar -->
    <string name="action_settings" translatable="false">@string/title_activity_settings</string>
    <string name="action_stop">Stop</string>
    <string name="action_search">Search</string>
    <string name="action_reset_icons">Reset Icons</string>
    <string name="action_test_icons">Enable All Icons (Testing Purposes)</string>
    <string name="action_place_shortcut">Add this icon to the homescreen</string>
    <string name="action_donate">Donate</string>
    <string name="action_bug_report">Report a bug</string>
    <string name="action_reset">Reset</string>

    <!-- Search -->
    <string name="search_empty">No Results</string>
    <string name="search_hint">Search Library…</string>

    <!-- Navigation Drawer -->
    <string name="page_home">Home</string>
    <string name="page_albums">Albums</string>
    <string name="page_songs">Songs</string>
    <string name="page_playlists">Playlists</string>
    <string name="page_artists">Artists</string>

    <string name="drawer_open">Open the App Drawer</string>
    <string name="drawer_close">Close the App Drawer</string>

    <!-- About -->
    <string name="about_visit_play">Visit us on Google Play</string>
    <string name="about_libraries_header">Libraries Used:</string>
    <string name="about_thanks_header">With special thanks to:</string>
    <string name="about_appcompat" translatable="false">Google Support Libraries</string>
    <string name="about_palette" translatable="false">Palette</string>
    <string name="about_glide" translatable="false">Glide</string>
    <string name="about_gitty" translatable="false">Gitty Reporter</string>
    <string name="about_appintro" translatable="false">AppIntro</string>
    <string name="about_fast_scroll" translatable="false">Recycler Fast Scroll</string>
    <string name="about_dialogs" translatable="false">Material Dialogs</string>
    <string name="about_icon">Designed icons</string>
    <string name="about_helped">Helped Development</string>
    <string name="about_managed">Managed the Project</string>
    <string name="about_created">Created the App</string>
    <string name="about_Karim" translatable="false">Karim Abou Zeid</string>
    <string name="about_Neel" translatable="false">Neel Raj</string>
    <string name="about_Substance" translatable="false">Substance Mobile</string>
    <string name="about_Adrian" translatable="false">Adrian Vovk</string>

    <!-- Settings -->
    <string name="settings_header_general">General</string>
    <string name="settings_header_theme">Theme</string>
    <string name="settings_header_main_screen">Main Screen</string>
    <string name="settings_header_other">Other</string>

    <string name="settings_select_base_theme">General Theme</string>
    <string-array name="settings_theme_items">
        <item>Dark</item>
        <item>Extra Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="settings_theme_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="settings_primary">Primary Color</string>
    <string name="settings_primary_summary">The main color in the app</string>
    <string name="settings_accent">Accent Color</string>
    <string name="settings_accent_summary">The color that compliments the primary color</string>
    <string name="settings_reset_primary">Reset Primary Color</string>
    <string name="settings_reset_primary_summary">Sets the primary color to be transparent</string>
    <string name="settings_color_navbar">Colored Navigation Bar</string>
    <string name="settings_color_navbar_summary">Whether or not to color the navigation bar</string>

    <string name="settings_tab_mode">Tab Mode</string>
    <string-array name="settings_tab_mode_choices">
        <item>None</item>
        <item>Standard Tabs</item>
        <item>Icon Tabs</item>
        <item>Scrolling Tabs</item>
    </string-array>
    <string-array name="settings_tab_mode_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="settings_page_names">Dynamic page names</string>
    <string name="settings_page_names_summary">Uses name of the currently showing page instead of \"Music\"</string>

    <string name="settings_bigger_space">Bigger Space in list</string>
    <string name="settings_bigger_space_summary">Increases the space between the albums</string>

    <string name="settings_palette">Use Palette</string>
    <string name="settings_palette_summary">Get colors from album art</string>

    <string name="settings_choose_icon">Choose Icon</string>
    <string name="settings_choose_icon_summary">Specifies what icon to show on your home screen</string>

    <string name="settings_header_about">About</string>
    <string name="settings_source_code">Source Code</string>
    <string name="settings_source_base_code">Original Code</string>

    <!-- Choose Icon -->
    <string name="settings_choose_icon_srini" translatable="false">Srini Kumar</string>
    <string name="settings_choose_icon_alex" translatable="false">Alex Mueller</string>
    <string name="settings_choose_icon_jaka" translatable="false">Jaka Mušič</string>
    <string name="settings_choose_icon_nguyen" translatable="false">A. H. Nguyen</string>

    <string name="settings_choose_icon_save_title">Save Changes?</string>
    <string name="settings_choose_icon_save_message">You modified the icon without saving. Would you like to save?</string>
    <string name="settings_choose_icon_save_positive">Yes</string>
    <string name="settings_choose_icon_save_negative">No</string>
    <string name="settings_choose_icon_save_neutral">Cancel</string>

    <string name="settings_donate_disambiguation_title">Donate Using</string>
    <string name="settings_donate_disambiguation_play" translatable="false">Google Play</string>
    <string name="settings_donate_disambiguation_paypal" translatable="false">PayPal</string>
    <string name="settings_donate_price_title">Select Amount</string>
    <string name="settings_donate_price_1">$1.00</string>
    <string name="settings_donate_price_5">$5.00</string>
    <string name="settings_donate_price_10">$10.00</string>
    <string name="settings_donate_price_25">$25.00</string>
    <string name="settings_donate_price_50">$50.00</string>
    <string name="settings_donate_terms_popup_title">PayPal donations have moved.</string>
    <string name="settings_donate_terms_popup_message">Google\'s terms state that I do not have a right to add PayPal donations to this app if I want it to stay on the Play Store.\nYou will be redirected to the Google+ Community for this app to donate. Continue?</string>

    <!-- Setup -->
    <string name="setup_intro">Welcome to GEM Player. Please keep in mind that this is beta software and may have a few issues.</string>
    <string name="permission_storage_explain_title">Storage</string>
    <string name="permission_storage_explain_message">The storage permission is required for GEM Player to be able to read your media library</string>
    <string name="setup_thanks">Thank You</string>
    <string name="enjoy">Enjoy the app!</string>
    <string name="internal_tester_warning_title">Warning</string>
    <string name="internal_tester_warning">You are running internal testing software. It may be unfinished. Do not distribute.</string>

    <!-- Playback -->
    <string name="playback_play">Play</string>
    <string name="playback_pause">Pause</string>
    <string name="playback_next">Next</string>
    <string name="playback_prev">Previous</string>
    <string name="playback_queue">Queue</string>
    <string name="playback_repeat">Repeat</string>
    <string name="playback_shuffle">Shuffle</string>
    <string name="playing_album">Playing Album</string>
    <string name="playback_error_unsupported">This media type is not supported</string>
    <string name="playback_error_IO">Error playing file. Please try again</string>
    <string name="playback_error_generic">Couldn\'t play this song</string>

    <!-- Misc. -->
    <string name="appwidget_text">Why are you using the widget?</string>
    <string name="msg_coming_soon">Coming Soon</string>
    <string name="msg_temp_removed">Removed for renovation</string>
    <string name="title_uri">Unknown</string>
    <string name="artist_uri">Unknown</string>
    <string name="saved">Saved</string>
    <string name="msg_upgrading">GEM Player is upgrading</string>
    <string name="title_activity_test">Test</string>
</resources>
