<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Substance Mobile
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses/.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory android:title="@string/settings_header_general">
        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="true"
            android:key="use_palette"
            android:persistent="true"
            android:summary="@string/settings_palette_summary"
            android:title="@string/settings_palette" />
        <com.afollestad.appthemeengine.prefs.ATEPreference
            android:summary="@string/settings_choose_icon_summary"
            android:title="@string/settings_choose_icon">
            <intent
                android:targetClass="com.animbus.music.ui.activity.settings.chooseIcon.ChooseIcon"
                android:targetPackage="com.animbus.music" />
        </com.afollestad.appthemeengine.prefs.ATEPreference>
    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>

    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory android:title="@string/settings_header_theme">
        <com.afollestad.appthemeengine.prefs.ATEListPreference
            android:entries="@array/settings_theme_items"
            android:entryValues="@array/settings_theme_values"
            android:key="base_theme"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/settings_select_base_theme" />
        <com.afollestad.appthemeengine.prefs.ATEColorPreference
            android:key="primary"
            android:persistent="false"
            android:summary="@string/settings_primary_summary"
            android:title="@string/settings_primary" />
        <com.afollestad.appthemeengine.prefs.ATEColorPreference
            android:key="accent"
            android:persistent="false"
            android:summary="@string/settings_accent_summary"
            android:title="@string/settings_accent" />
        <com.afollestad.appthemeengine.prefs.ATEPreference
            android:key="reset_primary"
            android:summary="@string/settings_reset_primary_summary"
            android:title="@string/settings_reset_primary" />
        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:key="color_navbar"
            android:persistent="true"
            android:summary="@string/settings_color_navbar_summary"
            android:title="@string/settings_color_navbar" />
    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>

    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory android:title="@string/settings_header_main_screen">
        <com.animbus.music.ui.activity.settings.DependencyListPreference
            android:defaultValue="0"
            android:entries="@array/settings_tab_mode_choices"
            android:entryValues="@array/settings_tab_mode_values"
            android:key="tab_mode"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/settings_tab_mode" />
        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:dependency="tab_mode"
            android:key="screen_name"
            android:persistent="true"
            android:summary="@string/settings_page_names_summary"
            android:title="@string/settings_page_names" />
        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:key="big_grid_space"
            android:persistent="true"
            android:summary="@string/settings_bigger_space_summary"
            android:title="@string/settings_bigger_space" />
    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>

    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory android:title="@string/settings_header_other">
        <Preference android:title="@string/action_donate"
            android:key="donate" />
        <Preference android:title="@string/settings_header_about">
            <intent
                android:targetClass="com.animbus.music.ui.activity.settings.About"
                android:targetPackage="com.animbus.music" />
        </Preference>
    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>
</PreferenceScreen>